# funfeed_python-hexagonal-architecture

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/core/domain/: base.py  post.py  user.py
src/core/ports/repositories/: user_repository.py
src/core/usecases/: readme.md
